# gouda

./: Cargo.toml  environment.yml  pyproject.toml  pytest.ini  readme.md  run_test.sh  test_all.sh
.github/workflows/: CI.yml
benchmarking/: config.yaml  run.py
gouda/: __init__.py  gouda.pyi
src/: constant.rs  knn.rs  lib.rs  matrix.rs  mice.rs  simple.rs  utils.rs
src/deeplearning/gain/: gain.py
src/imputer/: constant.rs  knn.rs  mod.rs  simple.rs
src/imputer/mice/: backend.rs  linear_regression.rs  mice.rs  mod.rs  model.rs
src/imputer/missforest/: backend.rs  mod.rs  model.rs
src/mice/: linear_regression.rs  mice.rs
src/utils/: constants.rs  data.rs  matrix.rs  mod.rs  python.rs
src/utils/matrix/: col.rs
tests/: readme.md  test_knn.py  test_mice.py  test_missforest.py  test_performance.py  test_simple.py
tests/resources/: test.csv
