[package]
name = "gouda-cheese"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gouda"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.17.2"
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }
numpy = "0.28.0"
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.10.1"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
