[package]
name = "gouda-cheese"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gouda"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-linalg = { version = "0.18.1", features = ["openblas"] }
numpy = "0.29.0"
pyo3 = { version = "0.29", features = ["extension-module"] }
rand = "0.10.1"
rayon = "1.12.0"
threadpool = "1.8.1"
openblas-src = "0.10.16"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[target.'cfg(windows)'.dependencies]
openblas-src = { version = "0.10.16", features = ["system"] }

[target.'cfg(not(windows))'.dependencies]
openblas-src = { version = "0.10.16" }
