[package]
name = "gouda-cheese"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gouda"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
numpy = "0.29.0"
pyo3 = { version = "0.29", features = ["extension-module"] }
rand = "0.10.1"
rayon = "1.12.0"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.18.1", features = ["intel-mkl"] }

[target.'cfg(not(windows))'.dependencies]
openblas-src = "0.10.16"
ndarray-linalg = { version = "0.18.1", features = ["openblas"] }
