[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "gouda-cheese"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

description = "Imputation Library primarly written in Rust"
readme = "readme.md"
dependencies = [
    "maturin>=1.13.3",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "scikit-learn>=1.3.2",
]
