[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "gouda-cheese"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

description = "Imputation Library primarly written in Rust"
readme = "readme.md"
dependencies = [
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "scikit-learn>=1.3.2",
]

[dependency-groups]
dev = [
    "lightgbm>=4.6.0",
    "missforest>=4.2.3",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "tqdm>=4.67.3",
    "maturin[patchelf]>=1.13.3",
]
