[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "gouda-cheese"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

description = "Imputation Library primarly written in Rust"
readme = "readme.md"
dependencies = [
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "scikit-learn>=1.3.2",
    "lightgbm>=4.6.0",
    "missforest>=4.2.3",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "tqdm>=4.67.3",
    "maturin[patchelf]>=1.13.3",
    "hyperimpute>=0.1.17",
    "pyyaml>=6.0.3",
    "ucimlrepo>=0.0.7",
    "swiss-cheese==0.1.6",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "benchmarking*"]
